# Clash-Detector

./: .gitignore  .replit  app.py  clash_detector.py  pdf_export.py  pyproject.toml  render.yaml  replit.md  requirements.txt
artifacts/bim-clash-detection/: .gitignore  app.py  clash_detector.py  requirements.txt
artifacts/bim-clash-detection/static/css/: styles.css
artifacts/bim-clash-detection/static/js/: app.js
artifacts/bim-clash-detection/templates/: index.html
