[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "BIM clash detection web app"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "ifcopenshell @ https://github.com/IfcOpenShell/ifcopenshell-python/releases/download/ifcopenshell-python-0.7.0/ifcopenshell-python-0.7.0-cp311-cp311-linux_x86_64.zip",
    "reportlab==4.2.2",
    "werkzeug==3.0.3",
]
